[TO-271] - Show test results count per issue on issues page (#608)
* Show affected runs count per issue on issues page

* Update relevant tests

* Change name of attribute to test results count

* Change name to test_executions_count
